# AI-RADAR-Tool

./: .env.example  .gitignore  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_STEPS.md  Prompt.md  README.md  docker-compose.yml
backend/: Dockerfile  debug_db.py  entrypoint.py  entrypoint.sh  pyproject.toml  test_api.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_feedback_table.py
backend/app/: config.py  dependencies.py  main.py  migrate.py
backend/app/api/v1/: detect_sector.py  export.py  feedback.py  router.py  scoring.py  search.py  sessions.py  translation.py  usecases.py
backend/app/models/: database.py  feedback.py  session.py  use_case.py
backend/app/prompts/: anonymize_use_case.py  justification.py  report_summary.py  roadmap.py
backend/app/schemas/: anonymize.py  feedback.py  roadmap.py  scoring.py  session.py  translation.py  use_case.py
backend/app/services/: business_rules.py  cache_service.py  embedding_service.py  llm_router.py  pdf_service.py  rag_service.py  scoring_service.py
backend/app/utils/: logger.py
backend/data/: SCRAPING_REPORT.md  find_all_commercial.py  find_changes.py  scraping_progress.json  seed_use_cases.json  seed_use_cases_anonymized.json  seed_use_cases_enriched.json  seed_use_cases_enriched_backup.json  seed_use_cases_enriched_descriptions_backup.json  seed_use_cases_enriched_solution_backup.json  show_changes.py  verify_anonymization.py
backend/evaluation/: benchmark_dataset.py  evaluator.py  run_benchmark.py
backend/scripts/: anonymize_ai_solutions.py  anonymize_companies_only.py  anonymize_descriptions.py  anonymize_titles_only.py  anonymize_use_cases.py  clean_commercial_names.py  enrich_use_cases.py  scrape_pipeline.py  seed_db.py  seed_qdrant.py
backend/templates/: pdf_report.css  pdf_report.html
backend/tests/: test_api_score.py  test_api_session.py  test_pdf.py  test_scoring.py  test_scraping.py
docs/: api_reference.md  architecture.md  scraping_strategy.md  setup_guide.md
frontend/: Dockerfile  (+7 more)
(+85 files in other folders)
